--- a/web/index.html
+++ b/web/index.html
@@ -7,9 +7,7 @@
 	</head>
 	<body ng-controller="tagLineController">
 <div class="wrapper">
-	<h1>Marquee with CSS3 Animation</h1>
-	<h3>Move the text from the right to the left</h3>
-	<div class="marquee">
+	<div class="marquee up">
 		<p>{{message}}</p>
 	</div>
 </div>
@@ -25,7 +23,6 @@
 
 		$timeout(getTagline, 1000);
 	}
-	console.log("fuckers");
 </script>
 </body>
 </html>
