--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
 	<body ng-controller="tagLineController">
 <div class="wrapper">
 	<div class="marquee up">
-		<p ng-repeat="message in messages">{{message}}</p>
+		<p ng-repeat="message in messages">{{message.message}}</p>
 	</div>
 </div>
 <script src="components/angular/angular.js"></script>
